<resources>
    <string name="app_name">实训项目</string>
    <string name="login">手机验证码登录</string>
    <string name="login1">新用户登录即完成注册，代表同意<font color="#DB4437">《用户协议》</font></string>
    <string name="userhint">请输入邮箱/手机号</string>
    <string name="passhint">请输入验证码</string>
    <string name="login3">获取验证码</string>
    <string name="loginbutton">登录</string>
    <string name="otherlogin">账号密码登录</string>
    <string name="emaillogin">邮箱验证码登录</string>
    <string name="forgetpass">忘记密码</string>
    <string name="inputpass">请输入密码</string>
    <string name="inputpass2">请再次输入密码</string>
    <string name="sure">确认</string>
    <string name="loading">玩命加载中...</string>
    <string name="home">首页</string>
    <string name="mine">我的</string>
    <string name="view_pic">查看图片</string>
    <string name="p_name">景点名称</string>
    <string name="jd_intro">景点攻略</string>
    <string name="skip">跳过设置</string>
    <string name="please_setpwd">设置账号密码</string>
    <string name="please_input_again">再次输入设置的密码</string>
    <string name="button_set">确定设置</string>
    <string name="suggestion">投诉和建议</string>
    <string name="version">版本号</string>
    <string name="version_code">V1.0</string>
    <string name="setting_text">设置</string>
    <string name="exit_login">退出登录</string>
    <string name="add">记一笔</string>
    <string name="num1">1</string>
    <string name="num2">2</string>
    <string name="num3">3</string>
    <string name="num4">4</string>
    <string name="num5">5</string>
    <string name="num6">6</string>
    <string name="num7">7</string>
    <string name="num8">8</string>
    <string name="num9">9</string>
    <string name="num0">0</string>
    <string name="point">.</string>
    <string name="addnum">+</string>
    <string name="ctoo">清零</string>
    <string name="addagain">再记</string>
    <string name="save">保存</string>
    <string name="input_remark">点此输入备注</string>
    <string name="none_bookkeep">没有任何收支记录</string>
    <string name="pic_info">图片详情</string>
    <string name="null_pic">当前暂无图片</string>
    <string name="all_money">总结余</string>
    <string name="per_info">个人信息</string>
    <string name="name">姓名</string>
    <string name="touxiang">头像</string>
    <string name="sex">性别</string>
    <string name="birthday">生日</string>
    <string name="findpwd">找回密码</string>
    <string name="setpwd_tip">设置过密码的无法设置</string>
</resources>
