<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical"
    tools:context=".ADDBKActivity">

    <TextView
        android:id="@+id/tv_name_book"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#DB4437"
        android:elevation="8dp"
        android:gravity="center"
        android:paddingTop="32dp"
        android:paddingBottom="16dp"
        android:text="@string/app_name"
        android:textColor="#fff"
        android:textSize="20dp"
        android:textStyle="bold" />

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewpager_book"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"></androidx.viewpager.widget.ViewPager>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edit_remark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#fff"
            android:focusable="auto"
            android:gravity="right"
            android:hint="@string/input_remark"
            android:maxLines="3"
            android:padding="8dp"
            android:scrollbars="none"
            android:textSize="12dp" />

        <TextView
            android:id="@+id/tv_add_money"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:paddingTop="16dp"
            android:paddingRight="16dp"
            android:paddingBottom="16dp"
            android:text="@string/num0"
            android:textColor="#db4437"
            android:textSize="18dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_num1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#fff"
                android:text="@string/num1"
                android:textColor="#000"
                android:textSize="20dp" />

            <Button
                android:id="@+id/btn_num2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#fff"
                android:text="@string/num2"
                android:textColor="#000"
                android:textSize="20dp" />

            <Button
                android:id="@+id/btn_num3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#fff"
                android:text="@string/num3"
                android:textColor="#000"
                android:textSize="20dp" />

            <Button
                android:id="@+id/btn_delete"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#fff"
                android:drawableBottom="@drawable/delete"
                android:textColor="#000" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_num4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#fff"
                android:text="@string/num4"
                android:textColor="#000"
                android:textSize="20dp" />

            <Button
                android:id="@+id/btn_num5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#fff"
                android:text="@string/num5"
                android:textColor="#000"
                android:textSize="20dp" />

            <Button
                android:id="@+id/btn_num6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#fff"
                android:text="@string/num6"
                android:textColor="#000"
                android:textSize="20dp" />

            <Button
                android:id="@+id/btn_cleattoo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#fff"
                android:text="@string/ctoo"
                android:textColor="#000" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_num7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#fff"
                android:text="@string/num7"
                android:textColor="#000"
                android:textSize="20dp" />

            <Button
                android:id="@+id/btn_num8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#fff"
                android:text="@string/num8"
                android:textColor="#000"
                android:textSize="20dp" />

            <Button
                android:id="@+id/btn_num9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#fff"
                android:text="@string/num9"
                android:textColor="#000"
                android:textSize="20dp" />

            <Button
                android:id="@+id/btn_add_again"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#fff"
                android:text="@string/addagain"
                android:textColor="#000" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_addnum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#fff"
                android:text="@string/addnum"
                android:textColor="#000"
                android:textSize="20dp" />

            <Button
                android:id="@+id/btn_num0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#fff"
                android:text="@string/num0"
                android:textColor="#000"
                android:textSize="20dp" />

            <Button
                android:id="@+id/btn_point"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#fff"
                android:text="@string/point"
                android:textColor="#000"
                android:textSize="20dp" />

            <Button
                android:id="@+id/btn_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#DB4437"
                android:text="@string/save"
                android:textColor="#fff" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>